[package]
name = "sct"
version = "0.1.1"
authors = ["lowit <ea@lowit.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
unicode-segmentation = "1.6.0"

[dev-dependencies]
rstest = "0.6.4"
