[package]
name = "ts"
version = "0.2.0"
authors = ["lowit <ea@lowit.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
chrono = "0.4.12"

[dev-dependencies]
rstest = "0.6.4"
